# 3d-navigation-ros-wrapper

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose-nvidia.local.yml  docker-compose-nvidia.yml  docker-compose.local.rviz.control.yml  docker-compose.local.rviz.yml  docker-compose.local.yml  docker-compose.yml  package.xml  python_tester.py  sprint_501.bt
3d_navigation/: CMakeLists.txt  package.xml
3d_navigation/include/3d_navigation/: global_planner.h  logging.h
3d_navigation/src/: global_planner.cpp  main.cpp
3d_navigation_ros_wrapper/: CMakeLists.txt  package.xml
3d_navigation_ros_wrapper/config/: params.yaml
3d_navigation_ros_wrapper/include/3d_navigation_ros_wrapper/: global_planner_wrapper.h
3d_navigation_ros_wrapper/launch/: global_planner.launch
3d_navigation_ros_wrapper/src/: global_planner_node.cpp  global_planner_wrapper.cpp  main.cpp
maps/: stairs_29_06.bt
tests/: planner.py  rviz_controll.py  start_goal_plan_test.py
tf_visual_tools/launch/: rviz.launch  rviz_control.launch
