<?xml version="1.0"?>
<package>
  <name>3d_navigation</name>
  <version>0.0.1</version>
  <description>ROS package for performing 3D navigation on octomap and voxelblock environments</description>

  <maintainer email="texnoman@itmo.ru">Vladislav Antipov</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/3d_navigation</url>
  <url type="repository">http://gitlab.com/beerlab/cpc/navigation/3d_navigation.git</url>
  <author email="texnoman@itmo.ru">Vladislav Antipov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
